gccida/g2/delete_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_insn/src/cfgrtl.c:576:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_insn/src/cfgrtl.c:576:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_insn/src/cfgrtl.c:591:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)insn[3].fld[0]; 
                       ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_insn/src/cfgrtl.c:604:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)insn[3].fld[0]; 
                       ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_insn/src/cfgrtl.c:614:48: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( *( _WORD *)insn == 33 && ( v2 = ( __int64)insn[4]) != 0 && *( _WORD *)v2 == 36 ) 
                                               ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_insn/src/cfgrtl.c:617:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( __int16 *)insn[2]; 
                 ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_insn/src/cfgrtl.c:624:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note = find_reg_note( insn, REG_LABEL, 0LL); 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_insn/src/cfgrtl.c:624:10: error: expected identifier or '('
reg_note = find_reg_note( insn, REG_LABEL, 0LL); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_insn/src/cfgrtl.c:625:42: error: use of undeclared identifier 'reg_note'
if ( reg_note && ( v4.rtwint = ( __int64)reg_note->fld[0], *( _WORD *)v4.rtwint == 36) ) 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_insn/src/cfgrtl.c:625:6: error: use of undeclared identifier 'reg_note'; did you mean 'reg_names'?
if ( reg_note && ( v4.rtwint = ( __int64)reg_note->fld[0], *( _WORD *)v4.rtwint == 36) ) 
     ^~~~~~~~
     reg_names
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_insn/src/regs.h:166:21: note: 'reg_names' declared here
extern const char * reg_names[FIRST_PSEUDO_REGISTER];
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_insn/src/cfgrtl.c:635:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( __int16 *)insn[2]; 
                 ^~~~~~~
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/delete_insn/src/obj/cfgrtl.o] Error 1
